# TeamDashboard

./: .env.example  README.md  docker-compose.yml  vercel.json
api/: catchall.py  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: events.py  meetings.py  recognition.py  tasks.py  teams.py  timeline.py  users.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  event.py  meeting.py  recognition.py  task.py  team.py  user.py
backend/app/schemas/: __init__.py  event.py  meeting.py  recognition.py  task.py  team.py  user.py
backend/app/services/: google_calendar.py  recognition.py
frontend/: next.config.js  package.json  tailwind.config.js
frontend/api/: [[...path]].py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EventsSection.tsx  MeetingSchedulerSection.tsx  RecognitionSection.tsx  TasksSection.tsx  TimelineSection.tsx
frontend/src/lib/: api.ts
